# Bug-Tracker

./: .gitignore  pyproject.toml
authentication/: admin.py  forms.py  urls.py  views.py
bug_tracker/: settings.py  urls.py
custom_user/: models.py  urls.py
custom_user/migrations/: 0001_initial.py
templates/: base.html  generic_form.html  index.html  profile.html  submitview.html
ticket/: admin.py  models.py  urls.py  views.py
ticket/migrations/: 0001_initial.py
ticket_file/: apps.py  forms.py  urls.py  views.py
