[tool.poetry]
name = "bug_tracker"
version = "0.1.0"
description = "modified bug tracker with css modifcatitons, plus this is a portfolio piece"
authors = ["Mustafa Prodhan <mustafa.prodhan.317@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
